tests/ui/consts/const-eval/c-variadic-fail.stderr
error[E0080]: more C-variadic arguments read than were passed
  --> $DIR/c-variadic-fail.rs:28:13
   |
LL |     const { read_n::<1>() }
   |             ^^^^^^^^^^^^^ evaluation of `read_too_many::{constant#2}` failed inside this call
   |
note: inside `read_n::<1>`
  --> $DIR/c-variadic-fail.rs:16:17
   |
LL |         let _ = ap.arg::<i32>();
   |                 ^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:28:5
   |
LL |     const { read_n::<1>() }
   |     ^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:28:5
   |
LL |     const { read_n::<1>() }
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: more C-variadic arguments read than were passed
  --> $DIR/c-variadic-fail.rs:32:13
   |
LL |     const { read_n::<2>(1) }
   |             ^^^^^^^^^^^^^^ evaluation of `read_too_many::{constant#3}` failed inside this call
   |
note: inside `read_n::<2>`
  --> $DIR/c-variadic-fail.rs:16:17
   |
LL |         let _ = ap.arg::<i32>();
   |                 ^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:32:5
   |
LL |     const { read_n::<2>(1) }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:32:5
   |
LL |     const { read_n::<2>(1) }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `u32`, but next argument is `i32`
  --> $DIR/c-variadic-fail.rs:50:13
   |
LL |     const { read_as::<u32>(1i32) };
   |             ^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast::{constant#6}` failed inside this call
   |
note: inside `read_as::<u32>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.arg::<T>()
   |     ^^^^^^^^^^^^^
note: inside `VaList::<'_>::arg::<u32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:50:5
   |
LL |     const { read_as::<u32>(1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:50:5
   |
LL |     const { read_as::<u32>(1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `i32`, but next argument is `u32`
  --> $DIR/c-variadic-fail.rs:53:13
   |
LL |     const { read_as::<i32>(1u32) };
   |             ^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast::{constant#7}` failed inside this call
   |
note: inside `read_as::<i32>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.arg::<T>()
   |     ^^^^^^^^^^^^^
note: inside `VaList::<'_>::arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:53:5
   |
LL |     const { read_as::<i32>(1u32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:53:5
   |
LL |     const { read_as::<i32>(1u32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `i32`, but next argument is `u64`
  --> $DIR/c-variadic-fail.rs:56:13
   |
LL |     const { read_as::<i32>(1u64) };
   |             ^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast::{constant#8}` failed inside this call
   |
note: inside `read_as::<i32>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.arg::<T>()
   |     ^^^^^^^^^^^^^
note: inside `VaList::<'_>::arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:56:5
   |
LL |     const { read_as::<i32>(1u64) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:56:5
   |
LL |     const { read_as::<i32>(1u64) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `f64`, but next argument is `i32`
  --> $DIR/c-variadic-fail.rs:59:13
   |
LL |     const { read_as::<f64>(1i32) };
   |             ^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast::{constant#9}` failed inside this call
   |
note: inside `read_as::<f64>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.arg::<T>()
   |     ^^^^^^^^^^^^^
note: inside `VaList::<'_>::arg::<f64>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:59:5
   |
LL |     const { read_as::<f64>(1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:59:5
   |
LL |     const { read_as::<f64>(1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: va_arg type mismatch: requested `*const u8`, but next argument is `i32`
  --> $DIR/c-variadic-fail.rs:62:13
   |
LL |     const { read_as::<*const u8>(1i32) };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `read_cast::{constant#10}` failed inside this call
   |
note: inside `read_as::<*const u8>`
  --> $DIR/c-variadic-fail.rs:37:5
   |
LL |     ap.arg::<T>()
   |     ^^^^^^^^^^^^^
note: inside `VaList::<'_>::arg::<*const u8>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:62:5
   |
LL |     const { read_as::<*const u8>(1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:62:5
   |
LL |     const { read_as::<*const u8>(1i32) };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: memory access failed: ALLOC0 has been freed, so this pointer is dangling
  --> $DIR/c-variadic-fail.rs:75:13
   |
LL |             ap.arg::<i32>();
   |             ^^^^^^^^^^^^^^^ evaluation of `use_after_free::{constant#0}` failed inside this call
   |
note: inside `VaList::<'_>::arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:71:5
   |
LL | /     const {
LL | |         unsafe {
LL | |             let ap = helper(1, 2, 3);
LL | |             let mut ap = std::mem::transmute::<_, VaList>(ap);
...  |
LL | |     };
   | |_____^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:71:5
   |
LL | /     const {
LL | |         unsafe {
LL | |             let ap = helper(1, 2, 3);
LL | |             let mut ap = std::mem::transmute::<_, VaList>(ap);
...  |
LL | |     };
   | |_____^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: using ALLOC1 as variable argument list pointer but it does not point to a variable argument list
  --> $DIR/c-variadic-fail.rs:107:22
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |                      ^^^^^^^^^^^^^^^ evaluation of `manual_copy_drop::{constant#0}` failed inside this call
   |
note: inside `manual_copy_drop::helper`
  --> $DIR/c-variadic-fail.rs:104:9
   |
LL |         drop(ap);
   |         ^^^^^^^^
note: inside `std::mem::drop::<VaList<'_>>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
note: inside `drop_in_place::<VaList<'_>> - shim(Some(VaList<'_>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `<VaList<'_> as Drop>::drop`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:107:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:107:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: using ALLOC2 as variable argument list pointer but it does not point to a variable argument list
  --> $DIR/c-variadic-fail.rs:123:22
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |                      ^^^^^^^^^^^^^^^ evaluation of `manual_copy_forget::{constant#0}` failed inside this call
   |
note: inside `manual_copy_forget::helper`
  --> $DIR/c-variadic-fail.rs:120:9
   |
LL |         drop(ap);
   |         ^^^^^^^^
note: inside `std::mem::drop::<VaList<'_>>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
note: inside `drop_in_place::<VaList<'_>> - shim(Some(VaList<'_>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `<VaList<'_> as Drop>::drop`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:123:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:123:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: using ALLOC3 as variable argument list pointer but it does not point to a variable argument list
  --> $DIR/c-variadic-fail.rs:136:22
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |                      ^^^^^^^^^^^^^^^ evaluation of `manual_copy_read::{constant#0}` failed inside this call
   |
note: inside `manual_copy_read::helper`
  --> $DIR/c-variadic-fail.rs:133:17
   |
LL |         let _ = ap.arg::<i32>();
   |                 ^^^^^^^^^^^^^^^
note: inside `VaList::<'_>::arg::<i32>`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:136:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:136:5
   |
LL |     const { unsafe { helper(1, 2, 3) } };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0080]: pointer not dereferenceable: pointer must point to some allocation, but got 0xdeadbeef[noalloc] which is a dangling pointer (it has no provenance)
  --> $DIR/c-variadic-fail.rs:145:5
   |
LL |     }
   |     ^ evaluation of `drop_of_invalid::{constant#0}` failed inside this call
   |
note: inside `drop_in_place::<VaList<'_>> - shim(Some(VaList<'_>))`
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
note: inside `<VaList<'_> as Drop>::drop`
  --> $SRC_DIR/core/src/ffi/va_list.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:141:5
   |
LL | /     const {
LL | |         let mut invalid: MaybeUninit<VaList> = MaybeUninit::zeroed();
LL | |         unsafe { invalid.as_mut_ptr().cast::<usize>().write(0xdeadbeef) };
LL | |         let ap = unsafe { invalid.assume_init() };
LL | |     }
   | |_____^

note: erroneous constant encountered
  --> $DIR/c-variadic-fail.rs:141:5
   |
LL | /     const {
LL | |         let mut invalid: MaybeUninit<VaList> = MaybeUninit::zeroed();
LL | |         unsafe { invalid.as_mut_ptr().cast::<usize>().write(0xdeadbeef) };
LL | |         let ap = unsafe { invalid.assume_init() };
LL | |     }
   | |_____^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0080`.
